# autoresearch_t

./: README.md  check_returns.py  prepare.py  program.md  pyproject.toml  requirements.txt  train.py
data_acquisition/: BATCHING_STRATEGY.md  QUICKSTART.md  README.md  VERSION_COMPARISON.md  fetch_data.py  fetch_data_v2.py  prepare_polygon.py  setup_data.sh  test_access_limits.py  verify_data.py  verify_integrity.py
data_acquisition/data_acquisition/: EURUSD_1min_latest.csv
