[project]
name = "autotrade"
version = "0.1.0"
description = "Autonomous algorithmic trading strategy optimization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "requests>=2.32.0",
    "torch==2.9.1",
    "ccxt>=4.0.0",
    "ta>=0.11.0",
    "scikit-learn>=1.3.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
